<resources>
    <string name="app_name">SMS2S3</string>
    <string name="action_settings">Settings</string>
    <string name="aws_access_key_id">AWS Access Key ID</string>
    <string name="aws_secret_access_key">AWS Secret Access Key</string>
    <string name="aws_credentials_preferences">AWS Credentials</string>
    <string name="aws_bucket_region">Region</string>
    <string name="aws_bucket_name">Bucket name</string>
    <string name="aws_object_prefix">Object prefix</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_clear_cache">Clear cache</string>
    <string name="action_quit">Quit</string>
    <string name="main_activity_connected">Main activity connected</string>
    <string name="main_activity_disconnected">Main activity disconnected</string>
    <string name="worker_connected">Worker connected</string>
    <string name="worker_disconnected">Worker disconnected</string>
    <string name="receiver_disconnected">Receiver disconnected</string>
    <string name="receiver_connected">Receiver connected</string>
</resources>